# CTranslate

./: .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md
cli/: Batch.h  BatchReader.cc  BatchReader.h  BatchWriter.cc  BatchWriter.h  CMakeLists.txt  detokenize.cc  tokenize.cc  translate.cc
cmake/: FindMKL.cmake
include/onmt/: CaseModifier.h  Dictionary.h  ITokenizer.h  ITranslator.h  Logger.h  Model.h  Model.hxx  PhraseTable.h  Profiler.h  SSE_Matrix_Mult.h  SpaceTokenizer.h  StorageLoader.h  SubDict.h  Threads.h  Tokenizer.h  TranslationOptions.h  TranslationResult.h  Translator.h  Translator.hxx  TranslatorFactory.h  Utils.h  VocabMapping.h  android_gnustl_compat.h  onmt.h
include/onmt/Eigen/: MatrixBatch.h
include/onmt/cuda/: Kernels.cuh  Utils.h
include/onmt/nn/: CAddTable.h  CAddTable.hxx  CMulTable.h  CMulTable.hxx  ConcatTable.h  ConcatTable.hxx  Container.h  Container.hxx  Graph.h  Graph.hxx  Identity.h  Identity.hxx  JoinTable.h  JoinTable.hxx  Linear.h  Linear.hxx  LinearGPU.h  LinearGPU.hxx  LogSoftMax.h  LogSoftMax.hxx  LookupTable.h  LookupTable.hxx  MM.h  MM.hxx  Module.h  Module.hxx  ModuleFactory.h  ModuleFactory.hxx  MulConstant.h  MulConstant.hxx  Node.h  Node.hxx  ParallelTable.h  ParallelTable.hxx  Replicate.h  Replicate.hxx  Reshape.h  Reshape.hxx  SelectTable.h  SelectTable.hxx  (+18 more)
include/onmt/simd/: MatrixMult.h
include/onmt/th/: Env.h  Obj.h  Obj.hxx  Utils.h
lib/TH/: CMakeLists.txt  THDiskFile.c  THFile.c  THFile.h  THFilePrivate.h  THGeneral.c  THGeneral.h
lib/unicode/: CMakeLists.txt  unicode.cc  unicode.h  unicode.hh  unicode_data.cc  unicode_data.h  unicode_data.hh
src/: CaseModifier.cc  Dictionary.cc  ITranslator.cc  Logger.cc  PhraseTable.cc  Profiler.cc  SSE_Matrix_Mult.cc  SpaceTokenizer.cc  SubDict.cc  Threads.cc  Tokenizer.cc  TranslationOptions.cc  TranslationResult.cc  TranslatorFactory.cc  VocabMapping.cc
src/cuda/: Kernels.cu  Utils.cc
src/simd/: AVX2_MatrixMult.cc  AVX512_MatrixMult.cc  SSE2_MatrixMult.cc  SSE_MatrixMult.cc
src/th/: Env.cc  Obj.cc  Utils.cc
test/: CMakeLists.txt
test/tokenization/: CMakeLists.txt  test.sh
